# sat-solvers

./: .gitignore  README.md  input.txt
cnf-generator/: CMakeLists.txt
cnf-generator/include/: FormulaeConfig.hpp
cnf-generator/src/: FormulaeGenerator.cpp
datasets/: 100_1_50_35_50.txt
sat-solvers/: pom.xml
sat-solvers/sat-solvers/src/main/java/com/github/williamharmer/cnfparser/: CNFParser.java
sat-solvers/sat-solvers/src/main/java/com/github/williamharmer/simplifications/: PureLiteralElimination.java  UnitPropagation.java
sat-solvers/sat-solvers/src/main/java/com/github/williamharmer/solvers/: BruteForce.java  DPLL.java  PLEAndBF.java  UPAndBF.java  UPAndPLEAndBF.java
sat-solvers/src/main/java/com/github/williamharmer/: Main.java
sat-solvers/src/main/java/com/github/williamharmer/cnfparser/: CNFParser.java  CNFParserCDCL.java
sat-solvers/src/main/java/com/github/williamharmer/simplifications/: CDCLUnitPropagation.java  PureLiteralElimination.java  UnitPropagation.java
sat-solvers/src/main/java/com/github/williamharmer/solvers/: BruteForce.java  DPLL.java  PLEAndBF.java  UPAndBF.java  UPAndPLEAndBF.java
sat-solvers/src/main/java/com/github/williamharmer/utilities/: ClauseCopy.java  OppositePolarity.java
src/: BruteForce.java  CDCL.java  CDCLClause.java  DPLL.java  DPLLSolver.java  Main.java  Notes  PLEAndBF.java  PureLiteralElimination.java  SATSolver.java  UPAndBF.java  UPAndPLEAndBF.java  UPandPLEandBF.java  UnitPropagation.java  UnitPropagationAndBruteForce.java  Utility.java  notes
(+6 files in other folders)
